--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,17 +75,31 @@
 
     <string name="path_data_heart_clip_hidden_right">M38 0 L38 0 L38 37 L38 37 Z</string>
 
-    <string name="path_data_heart_clip_hidden_top_left">M0 0 L0 0 L0 0 L0 0 Z</string>
+    <string name="path_data_heart_clip_hidden_top_left">M0 0 L0 0 L0 0 Z</string>
 
-    <string name="path_data_heart_clip_hidden_top_right">M38 0 L38 0 L38 0 L38 0 Z</string>
+    <string name="path_data_heart_clip_hidden_top_right">M56 0 L56 0 L56 0 Z</string>
 
-    <string name="path_data_heart_clip_hidden_bottom_right">M38 37 L38 37 L38 37 L38 37 Z</string>
+    <string name="path_data_heart_clip_hidden_bottom_right">M56 56 L56 56 L56 56 Z</string>
 
-    <string name="path_data_heart_clip_hidden_bottom_left">M0 37 L0 37 L0 37 L0 37 Z</string>
+    <string name="path_data_heart_clip_hidden_bottom_left">M0 56 L0 56 L0 56 Z</string>
 
     <string name="path_data_heart_clip_shown_rectangle">M0 0 L56 0 L56 56 L0 56 Z</string>
 
-    <string name="path_data_heart_clip_shown_rhombus">M56 0 L0 56 L56 112 L112 56 Z</string>
+    <!--
+
+    heart height is 37
+    37 * 2 = 74
+    these values should be kept in mind when doing the diagonal fill and empty
+
+    -->
+
+    <string name="path_data_heart_clip_shown_triangle_top_left">M0 0 L74 0 L 0 74 Z</string>
+
+    <string name="path_data_heart_clip_shown_triangle_top_right">M-18 0 L56 0 L 56 74 Z</string>
+
+    <string name="path_data_heart_clip_shown_triangle_bottom_right">M56 -18 L56 56 L -18 56 Z</string>
+
+    <string name="path_data_heart_clip_shown_triangle_bottom_left">M0 -18 L 74 56 L 0 56 Z</string>
 
     <!-- path names -->
 
